tests/toylang/neg/001541_mutation.toylang
program a = { var var a : bool a : bool; } .
